Body und Style änderungen, Farbe etc.

--- a/02_Selectors/index.html
+++ b/02_Selectors/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div{
+            background-color: 	rgb(0, 255, 251);
+            border-style: dotted;
+        }
+
+        .header{
+            font-size: 2rem;
+        }
+
+        .Ciao{
+            font-size: 1,5rem;
+        }
+    </style>
 </head>
+
 <body>
-    <p>Super</p>
+    <div class="header">Hallo</div>
+    <div class="end">Ciao</div>
 </body>
+
 </html>
