--- a/06_0_Übung/06_0_Übung.html
+++ b/06_0_Übung/06_0_Übung.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="06_0_stylesheet.css">
+    <link rel="stylesheet" href="06_0_cssreset.css">
 </head>
 <body>
     <div class="container1">
@@ -12,6 +13,21 @@
         <div class="box1">zwei</div>
         <div class="box1">drei</div>
     </div>
+
+    <div class="container2">
+        <div class="header">
+            <h1>Willkommen!</h1>
+        </div>
+        <div class="list">
+            <u>
+                <li>eins</li>
+                <li>zwei</li>
+                <li>drei</li>
+            </u>
+        </div>
+        <div class="box2">box</div>
+    </div>
     
+    <div class="box3">box</div>
 </body>
 </html>
