--- a/06_2_Übung/06_2_Übung.html
+++ b/06_2_Übung/06_2_Übung.html
@@ -12,5 +12,12 @@
         <div class="box2">box2</div>
     </div>
     <div class="box1">box1</div>
+    <div class="con02">
+    <div class="container2">
+        <div class="box3">eins</div>
+        <div class="box3">zwei</div>
+        <div class="box3">drei</div>
+    </div>
+    </div>
 </body>
 </html>
