--- a/08_00_Responsive_Web/08_Responsive_Web.html
+++ b/08_00_Responsive_Web/08_Responsive_Web.html
@@ -17,10 +17,19 @@
         }
         .container{
             display: grid;
+            grid-template-columns: 100%;
+            grid-auto-rows: minmax(100px, auto);
+            column-gap: 1px;
+            row-gap: 1px;
+        }
+        @media (min-width: 600px){
+            .container{
+            display: grid;
             grid-template-columns: 33% 33% 33%;
             grid-auto-rows: minmax(100px, auto);
             column-gap: 1px;
             row-gap: 1px;
+            }
         }
     </style>
 </head>
