09_CSS_Units_1 done

--- a/09_CSS_Units/09_CS_Units_1.html
+++ b/09_CSS_Units/09_CS_Units_1.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            margin: 0px;
+        }
+
+        div{
+            height: 50px;
+            background-color: red;
+        }
+
+        .container1{
+            width: 50%;
+        }
+
+        .container2{
+            width: 50vw;
+            height: 50vh;
+        }
+
+        .main{
+            background-color: green;
+            height: 200px;
+            width: 200px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="main">
+        <div class="container2">
+            container 2 vw
+        </div>
+    </div>
 </body>
 </html>
