11_Mercedes in progress

--- a/11_Mercedes/11_Mercedes_Website.html
+++ b/11_Mercedes/11_Mercedes_Website.html
@@ -28,6 +28,24 @@
             </div>
         </div>
     </div>
+    <div class="container1">
+        <div class="text">
+            <div class="gross">Fahr deinen Traum.</div>
+            <div class="klein">Jetzt im leasing mit Fixzins ab 1,99 %.</div>
+        </div>
+    </div>
+    <div class="container2">
+        <div class="border">Mehr erfahren</div>
+        <div class="blue">Angebot anfordern</div>
+    </div>
+    <div class="bubble"> <svg width="40px" height="40px" viewBox="0 0 40 40">
+            <path
+                d="M14 2C6.268 2 0 6.924 0 13a10.106 10.106 0 0 0 4.6 8.132A14.374 14.374 0 0 1 0 26.286a18.948 18.948 0 0 0 9.714-2.816c1.401.353 2.84.531 4.286.53 7.732 0 14-4.924 14-11S21.732 2 14 2zm-8 8h10v2H6v-2zm16 6H6v-2h16v2z"
+                fill="currentColor"></path>
+            <path
+                d="M35.4 33.132A10.107 10.107 0 0 0 40 25c0-5.012-4.27-9.232-10.104-10.56C29.01 20.931 22.222 26 14 26a19.412 19.412 0 0 1-1.942-.107C12.638 31.55 18.652 36 26 36a17.476 17.476 0 0 0 4.286-.53A18.949 18.949 0 0 0 40 38.285a14.375 14.375 0 0 1-4.6-5.153z"
+                fill="currentColor"></path>
+        </svg> </div>
     <img src="Mercedes_jpg.webp" class="Hintergrund">
 </body>
 
