--- a/11_Mercedes/11_Mercedes_Website.html
+++ b/11_Mercedes/11_Mercedes_Website.html
@@ -12,33 +12,50 @@
 <body>
     <div class="topbar">
         <div class="menubox">
-            <div class="menu">Modelle</div>
-            <div class="menu">Kaufen</div>
-            <div class="menu">Services</div>
-            <div class="menu">Markenwelt</div>
+            <div class="menu white">Modelle</div>
+            <div class="menu white">Kaufen</div>
+            <div class="menu white">Services</div>
+            <div class="menu white">Markenwelt</div>
         </div>
         <img src="Mercedes_Logo.png" class="Logo">
         <div class="usermenu">
-            <img src="Gesetz.png" class="user">
-            <img src="search.png" class="user">
-            <img src="fav.png" class="user">
+            <img src="Gesetz.png" class="user white">
+            <img src="search.png" class="user white">
+            <img src="fav.png" class="user white">
             <div class="login">
-                <img src="user.png" class="userlogin pic">
-                <div class="userlogin">Login</div>
+                <img src="user.png" class="userlogin pic white">
+                <div class="userlogin white">Login</div>
             </div>
         </div>
     </div>
-    <div class="container1">
-        <div class="text">
-            <div class="gross">Fahr deinen Traum.</div>
-            <div class="klein">Jetzt im leasing mit Fixzins ab 1,99 %.</div>
+    <div class="content">
+        <img src="Mercedes_jpg.webp" class="Hintergrund">
+        <div class="overlay"></div>
+        <div class="container1">
+            <div class="text">
+                <div class="gross">Fahr deinen Traum.</div>
+                <div class="klein">Jetzt im leasing mit Fixzins ab 1,99 %.</div>
+            </div>
+        </div>
+        <div class="container2">
+            <div class="border">Mehr erfahren</div>
+            <div class="blue">Angebot anfordern</div>
         </div>
     </div>
-    <div class="container2">
-        <div class="border">Mehr erfahren</div>
-        <div class="blue">Angebot anfordern</div>
+    <div class="sidenote">[a]Berechnungsbeispiel: Unverbindliches Restwertleasingangebot von Mercedes-Benz Financial
+        Services Austria GmbH (Leasingvariante bei welcher der Kunde ein Restwertrisiko trägt); EQA 250
+        Österreich-Edition ab 309,00 € mtl.; Barzahlungspreis 46.090,30 €; Restwert 19.546,09 €; Anzahlung 13.827,09
+        €; Rechtsgeschäftsgebühr 251,70 €; Bearbeitungsgebühr (pauschal) 250,00 €; Laufzeit 48 Monate; Laufleistung
+        10.000 km p.a.; Gesamtbetrag 48.665,60 €; Sollzinssatz fix 1,99% p.a.; eff. Jahreszinssatz 2,55%; sämtliche
+        Werte inkl. MwSt.; vorbeh. Bonitätsprüfung, Änderungen und Druckfehler; Details und weitere Informationen
+        können Sie den AGB entnehmen (www.mercedes-benz.at/agb);Vollkaskoversicherung optional; Kraftstoffverbrauch
+        gesamt (kombiniert): 0,0 l/100km; CO₂-Emissionen gesamt (kombiniert): 0,0 g/km; Stromverbrauch (gewichtet,
+        kombiniert): 14,5 - 16,7 kWh/100 km; angegebene Werte wurden nach dem vorgeschriebenen Messverfahren (WLTP)
+        ermittelt; für weiterführende Informationen besuchen Sie bitte www.mercedes-benz.at/wltp; die Werte
+        variieren in Abhängigkeit der gewählten Sonderausstattung; Angebot gültig bis 31.12.2024 bzw. bis auf
+        Widerruf bei allen teilnehmenden Mercedes-Benz Partnern. Stand 08/2024. Abbildung ist Symbolfoto.
     </div>
-    <div class="bubble"> <svg width="40px" height="40px" viewBox="0 0 40 40">
+    <div class="bubble"> <svg width="30px" height="30px" viewBox="0 0 40 40">
             <path
                 d="M14 2C6.268 2 0 6.924 0 13a10.106 10.106 0 0 0 4.6 8.132A14.374 14.374 0 0 1 0 26.286a18.948 18.948 0 0 0 9.714-2.816c1.401.353 2.84.531 4.286.53 7.732 0 14-4.924 14-11S21.732 2 14 2zm-8 8h10v2H6v-2zm16 6H6v-2h16v2z"
                 fill="currentColor"></path>
@@ -46,7 +63,6 @@
                 d="M35.4 33.132A10.107 10.107 0 0 0 40 25c0-5.012-4.27-9.232-10.104-10.56C29.01 20.931 22.222 26 14 26a19.412 19.412 0 0 1-1.942-.107C12.638 31.55 18.652 36 26 36a17.476 17.476 0 0 0 4.286-.53A18.949 18.949 0 0 0 40 38.285a14.375 14.375 0 0 1-4.6-5.153z"
                 fill="currentColor"></path>
         </svg> </div>
-    <img src="Mercedes_jpg.webp" class="Hintergrund">
 </body>
 
 </html>
