01_HTML_JS_Zugriff & 02_Zufallsgenerator done

--- a/03_HTML_&_JS/01_Zugriff_JS_HTML/01_index.html
+++ b/03_HTML_&_JS/01_Zugriff_JS_HTML/01_index.html
@@ -11,6 +11,14 @@
 <body>
     <h1>Hello</h1>
     <div id="content">Das ist gut</div>
+    <input type="text" id="value1" />
+    <input type="text" id="value2" />
+    <button id="Add">Add</button>
+    <button id="Sub">Sub</button>
+    <button id="Mult">Mult</button>
+    <button id="Div">Div</button>
+    <div id="result"></div>
+
 </body>
 
 </html>
