--- a/03_HTML_&_JS/04_Todo_List/04_index.html
+++ b/03_HTML_&_JS/04_Todo_List/04_index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="04_script.js"></script>
+    <script src="04_script.js" defer></script>
     <link rel="stylesheet" href="04_style.css">
 </head>
 
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <h1>Todos</h1>
         <input type="text" id="input">
-        <div id="todos">
+        <div id="todos" class="tasks">
 
         </div>
     </div>
