--- a/04_Javascript_Ajax/02_Fotball_API/index.html
+++ b/04_Javascript_Ajax/02_Fotball_API/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cssreset.css">
 </head>
 
 <body>
     <h1>Football</h1>
     <div id="table"></div>
+
+    <div id="nextMatch"></div>
 </body>
 
 </html>
