03_Tailwind done Football API Changes

--- a/04_Javascript_Ajax/03_Tailwind/index.html
+++ b/04_Javascript_Ajax/03_Tailwind/index.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js" defer></script>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 
 <body>
-    <h1 class="font-extrabold text-3xl font-bold p-4 bg-sky-100 border rounded-lg max-w-40 m-5 shadow-lg">Football</h1>
-    <div id="table" class=""></div>
+    <div class="">
+        <div class="text-3xl p-4 bg-green-400 font-thin">
+            <span class="hover:text-blue-500 hover:font-extrabold hover:cursor-pointer">Menu</span>
+        </div>
+        <div class="">
+            content
+        </div>
+    </div>
 
-    <div id="nextMatch"></div>
 </body>
 
 </html>
